--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,7 +1,7 @@
 ﻿.hero {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   height: 600px;
   background: url(images/hero.jpg) no-repeat;
   background-position: right 15% center;
@@ -36,6 +36,7 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .hero {
+    align-items: center;
     height: 800px;
     background-position: right 18% center;
     background-attachment: fixed;
